--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue3-date-time-picker": "^2.4.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
