--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^1.29.3",
     "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
+    "prettier": "^2.5.1",
     "vue": "^3.2.25",
     "vue-router": "4",
     "vue3-date-time-picker": "^2.4.4"
@@ -21,6 +22,7 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
+    "prettier-plugin-tailwindcss": "^0.1.5",
     "tailwindcss": "^3.0.13",
     "vite": "^2.7.2"
   }
