--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "dependencies": {
     "@headlessui/vue": "^1.4.2",
     "@heroicons/vue": "^1.0.5",
-    "@j-t-mcc/vue3-chartjs": "^1.2.0",
     "@supabase/supabase-js": "^1.29.3",
-    "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
+    "lodash-es": "^4.17.21",
     "prettier": "^2.5.1",
     "vue": "^3.2.25",
     "vue-router": "4",
+    "vue3-charts": "^1.1.28",
     "vue3-date-time-picker": "^2.4.4"
   },
   "devDependencies": {
